--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "personalgrowth_api",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": " index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -17,11 +17,22 @@
   },
   "homepage": "https://github.com/oleksandrHrytsan/personal-growth-api#readme",
   "devDependencies": {
+    "@babel/preset-typescript": "^7.18.6",
+    "@types/node": "^18.11.15",
     "eslint": "8.29.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-prettier": "4.2.1",
     "prettier": "2.8.1"
+  },
+  "dependencies": {
+    "@types/express": "^4.17.15",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "pg": "^8.8.0",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.3.11",
+    "typescript": "^4.9.4"
   }
 }
