--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
    "scripts": {
       "test": "echo \"Error: no test specified\" && exit 1",
       "start": "ts-node src/index.ts",
-      "typeorm": "typeorm-ts-node-commonjs"
+      "typeorm": "typeorm-ts-node-commonjs",
+      "dev": "nodemon ./src/index.ts"
    },
    "repository": {
       "type": "git",
@@ -21,19 +22,22 @@
    "devDependencies": {
       "@babel/preset-typescript": "^7.18.6",
       "@types/node": "^16.11.10",
-      "eslint": "8.29.0",
+      "@typescript-eslint/eslint-plugin": "^5.46.1",
+      "@typescript-eslint/parser": "^5.46.1",
+      "eslint": "^8.29.0",
       "eslint-config-airbnb": "19.0.4",
       "eslint-config-prettier": "8.5.0",
       "eslint-plugin-import": "2.26.0",
       "eslint-plugin-prettier": "4.2.1",
       "prettier": "2.8.1",
-      "ts-node": "10.7.0",
+      "ts-node": "^10.7.0",
       "typescript": "4.5.2"
    },
    "dependencies": {
       "@types/express": "^4.17.15",
       "dotenv": "^16.0.3",
       "express": "^4.18.2",
+      "nodemon": "^2.0.20",
       "pg": "^8.4.0",
       "reflect-metadata": "^0.1.13",
       "typeorm": "0.3.11",
