--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
    },
    "dependencies": {
       "@types/express": "^4.17.15",
+      "class-validator": "^0.14.0",
       "dotenv": "^16.0.3",
       "express": "^4.18.2",
       "nodemon": "^2.0.20",
