--- a/package.json
+++ b/package.json
@@ -35,12 +35,15 @@
    },
    "dependencies": {
       "@types/express": "^4.17.15",
+      "class-transformer": "^0.5.1",
+      "class-validator": "^0.14.0",
       "dotenv": "^16.0.3",
       "express": "^4.18.2",
       "nodemon": "^2.0.20",
       "pg": "^8.4.0",
       "reflect-metadata": "^0.1.13",
       "typeorm": "0.3.11",
+      "typeorm-naming-strategies": "^4.1.0",
       "typescript": "^4.9.4"
    }
 }
