--- a/.eslintrc
+++ b/.eslintrc
@@ -2,8 +2,13 @@
   "env": {
     "node": true
   },
-  "extends": ["airbnb-base", "plugin:prettier/recommended"],
-  "plugins": ["prettier"],
+  "extends": [
+    "eslint:recommended",
+    "plugin:@typescript-eslint/eslint-recommended",
+    "plugin:@typescript-eslint/recommended",
+  ],
+  "parser": "@typescript-eslint/parser",
+  "plugins": ["@typescript-eslint", "prettier"],
   "root": true,
   "rules": {
     "no-useless-return": "off",
