--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
    },
    "dependencies": {
       "@types/express": "^4.17.15",
+      "body-parser": "^1.20.1",
       "class-transformer": "^0.5.1",
       "class-validator": "^0.14.0",
       "dotenv": "^16.0.3",
