--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
       "express": "^4.18.2",
       "nodemon": "^2.0.20",
       "pg": "^8.4.0",
+      "pino": "^8.14.1",
+      "pino-pretty": "^10.0.0",
       "reflect-metadata": "^0.1.13",
       "typeorm": "0.3.11",
       "typeorm-naming-strategies": "^4.1.0",
